<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_photo"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/photo_menu_item"/>
        <item
            android:id="@+id/nav_concerts"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/concerts_menu_item"/>
        <item
            android:id="@+id/nav_contacts"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contacts_menu_item"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/music_menu_item"/>
        <item
            android:id="@+id/nav_comments"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/comments_menu_item"/>
    </group>

</menu>