<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:weightSum="1">


    <TextView
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/commentplz"
        android:id="@+id/tvCommentTitle"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:layout_width="303dp"
        android:layout_height="107dp"
        android:id="@+id/etCommentText"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnsubmit"
            android:theme="@style/ColoredButton"
            android:id="@+id/btnSubmit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btncancel"
            android:theme="@style/ColoredButton"
            android:id="@+id/btnCancel"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>